--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="main.css">
+  <link rel="icon" type="image/x-icon" href="favicon_alt.ico">
   <title>Amy's Really Good Startpage</title>
 </head>
 <body>
